syntax = "proto3";

option csharp_namespace = "Flexcube_module_grpc";
package accountdetail; 
import "Protos/common.proto";

message CustomerDetail {

    string full_name         = 1; 
    string cif_creation_date = 2;  
    string customer_number   = 3;  
    
  
    string date_of_birth     = 4;  
    string gender            = 5;  
    string email_id          = 6;  
    string mobile_number     = 7; 
    
    string address_line_1    = 8;  
    string address_line_2    = 9;  
    string address_line_3    = 10; 
    string address_line_4    = 11;
    string country           = 12; 
    string branch           = 13; 
}


message AccountDetailRequest {
  string branch_code     = 1;
  string customer_id     = 2; 
}

message AccountDetailResponse {
    CustomerDetail customer = 1; 
    string status           = 2; 
    string message          = 3;
}


service AccountDetailService { 
  rpc QueryCustomerDetails (common.ServiceRequest) returns (common.ServiceResponse);
}