syntax = "proto3";

import "google/protobuf/any.proto";

package service;

service Service {
  rpc Handle(ServiceRequest) returns (ServiceResponse);
}

message ServiceRequest {
  string request_id = 1;
  string source_system = 2;
  string channel = 3;
  string user_id = 4;
  google.protobuf.Any data = 5;
}

message ServiceResponse {
  string request_id = 1;
  string code = 2;
  string message = 3;
  google.protobuf.Any data = 4;
}
